rust_test_framework/tests/compile_tests/should_fail/duplicate_struct.stderr
error: Duplicate test case value found
  --> tests/compile_tests/should_fail/duplicate_struct.rs:10:15
   |
10 | #[test_params(MyStruct { x: 1 })]
   |               ^^^^^^^^
